boost1.37 (1.37.0-1) unstable; urgency=low

  * New upstream.

  * patches/test-child-exit-t1723.patch:
  * patches/kfreebsd-poll-symbols.patch:
  * patches/gcc43-spirit-1617.patch: Remove, applied upstream.
  
  * check-interdep.sh:
  * documention-files:
  * example-files: Update for new version.

 -- Steve M. Robbins <smr@debian.org>  Fri, 07 Nov 2008 05:34:48 -0600

boost1.36 (1.36.0-2) unstable; urgency=low

  * debian/patches/endian.patch: New.  Include <endian.h> unconditionally
    on all Debian systems.

 -- Steve M. Robbins <smr@debian.org>  Mon, 27 Oct 2008 00:49:42 -0500

boost1.36 (1.36.0-1) unstable; urgency=low

  * New upstream version.  Closes: #495179.
    - patches/serialisation-utility-include.patch:
    - patches/serialization-intrinsic64.patch:
    - patches/sp_counted_base.patch: Remove.  Applied upstream.

  * patches/gcc43-date_time.patch:
  * patches/gcc43-spirit-1617.patch:
  * patches/gcc43-path_name_check.patch: New.  Fixes for GCC 4.3 issues.

  * patches/gcc-4.3.patch: Remove.  Most of this was applied upstream;
    remainder is now in gcc43-date_time.patch.

  * control:
  * rules: Add packages for Boost.Math.
  
  * copyright: Convert to UTF-8.

 -- Steve M. Robbins <smr@debian.org>  Sun, 28 Sep 2008 00:26:01 -0500

boost1.35 (1.35.0-8) experimental; urgency=low

  * debian/patches/jam-wall-clean.patch: Additional changes to expand.c,
    hash.c to remove warnings from amd64 & s390.
  
  * libboost-python1.35-dev: Add preferred alternative dependency
    "python (>= 2.5)", since elementtree is included in Python 2.5 and
    later.  Fix from Martin Pitt <martin.pitt@ubuntu.com>.  Closes: #494791.

 -- Steve M. Robbins <smr@debian.org>  Wed, 13 Aug 2008 03:36:02 -0500

boost1.35 (1.35.0-7) experimental; urgency=low

  * debian/patches/avoid-PATH_MAX.patch: Define symbol _GNU_SOURCE in
    order that get_current_dir_name() is declared.  Should fix the build
    failure #494346.
