@@ -1,4 +1,4 @@
-Source: boost1.36
+Source: boost1.37
 Homepage: http://www.boost.org/
 Section: libs
 Priority: optional
@@ -8,25 +8,25 @@ Build-Depends: debhelper (>= 6.0.7), quilt, bison, flex, docbook-to-man, xsltpro
 XS-Python-Version: 2.4, 2.5
 Standards-Version: 3.8.0
 
-Package: libboost1.36-dbg
+Package: libboost1.37-dbg
 Architecture: any
 Section: libdevel
 Priority: extra
 Depends: ${shlibs:Depends}
-Conflicts: libboost-dbg, libboost1.35-dbg
-Suggests: libboost1.36-dev (= ${binary:Version})
+Conflicts: libboost-dbg, libboost1.35-dbg, libboost1.36-dbg
+Suggests: libboost1.37-dev (= ${binary:Version})
 Description: Boost C++ Libraries with debug symbols
  Part of the Boost C++ Libraries collection.
  .
  These libraries are built with debug symbols. They are useful to debug
  programs which use Boost. These must be used also at build/link time.
 
-Package: libboost1.36-dev
+Package: libboost1.37-dev
 Architecture: any
 Section: libdevel
-Depends: ${shlibs:Depends}, libstdc++-dev, libboost-serialization1.36-dev (= ${binary:Version})
-Recommends: libboost1.36-doc, libboost-date-time1.36-dev, libboost-filesystem1.36-dev, libboost-graph1.36-dev, libboost-iostreams1.36-dev, libboost-program-options1.36-dev, libboost-python1.36-dev, libboost-regex1.36-dev, libboost-signals1.36-dev, libboost-test1.36-dev, libboost-thread1.36-dev, libboost-wave1.36-dev
-Conflicts: libboost-dev, bcp, libboost1.35-dev
+Depends: ${shlibs:Depends}, libstdc++-dev, libboost-serialization1.37-dev (= ${binary:Version})
+Recommends: libboost1.37-doc, libboost-date-time1.37-dev, libboost-filesystem1.37-dev, libboost-graph1.37-dev, libboost-iostreams1.37-dev, libboost-program-options1.37-dev, libboost-python1.37-dev, libboost-regex1.37-dev, libboost-signals1.37-dev, libboost-test1.37-dev, libboost-thread1.37-dev, libboost-wave1.37-dev
+Conflicts: libboost-dev, bcp, libboost1.35-dev, libboost1.36-dev
 Description: Boost C++ Libraries development files
  The Boost web site provides free, peer-reviewed, portable C++ source
  libraries. The emphasis is on libraries which work well with the C++
@@ -41,12 +41,12 @@ Description: Boost C++ Libraries development files
  For the following subprojects separate packages exist: 
  date-time, filesystem, graph, python, regex, signals, test, and thread.
 
-Package: libboost1.36-doc
+Package: libboost1.37-doc
 Homepage: http://www.boost.org/libs/
 Architecture: all
 Section: doc
-Suggests: libboost1.36-dev (>= ${source:Version})
-Conflicts: libboost-doc, libboost1.35-doc
+Suggests: libboost1.37-dev (>= ${source:Version})
+Conflicts: libboost-doc, libboost1.35-doc, libboost1.36-doc
 Description: Boost.org libraries documentation
  The Boost web site provides free, peer-reviewed, portable C++ source
  libraries. The emphasis is on libraries which work well with the C++
@@ -56,11 +56,11 @@ Description: Boost.org libraries documentation
  already been proposed for inclusion in the C++ Standards Committee's
  upcoming C++ Standard Library Technical Report.
  .
- This is documentation for the libboost1.36-dev package in HTML format.
- Some pages point to header files provided in libboost1.36-dev package,
+ This is documentation for the libboost1.37-dev package in HTML format.
+ Some pages point to header files provided in libboost1.37-dev package,
  so it is suggested to install the latter as well.
 
-Package: libboost-date-time1.36.0
+Package: libboost-date-time1.37.0
 Homepage: http://www.boost.org/libs/date_time/
 Architecture: any
 Section: libs
@@ -71,19 +71,19 @@ Description: set of date-time libraries based on generic programming concepts
  These libraries are intended to make programming with dates and times
  almost as simple and natural as programming with strings and integers.
 
-Package: libboost-date-time1.36-dev
+Package: libboost-date-time1.37-dev
 Homepage: http://www.boost.org/libs/date_time/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-date-time1.36.0 (= ${binary:Version}), libboost-serialization1.36-dev (= ${binary:Version})
-Conflicts: libboost-date-time-dev, libboost-date-time1.36-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-date-time1.37.0 (= ${binary:Version}), libboost-serialization1.37-dev (= ${binary:Version})
+Conflicts: libboost-date-time-dev, libboost-date-time1.36-dev, libboost-date-time1.37-dev
 Description: set of date-time libraries based on generic programming concepts
  Part of the Boost C++ Libraries collection.
  .
  These libraries are intended to make programming with dates and times
  almost as simple and natural as programming with strings and integers.
 
-Package: libboost-filesystem1.36.0
+Package: libboost-filesystem1.37.0
 Homepage: http://boost.org/libs/filesystem/
 Architecture: any
 Section: libs
@@ -95,12 +95,12 @@ Description: filesystem operations (portable paths, iteration over directories, 
  manipulate paths, files, and directories.  The goal is to
  facilitate portable script-like operations from within C++ programs.
 
-Package: libboost-filesystem1.36-dev
+Package: libboost-filesystem1.37-dev
 Homepage: http://boost.org/libs/filesystem/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-filesystem1.36.0 (= ${binary:Version}), libboost-system1.36-dev (= ${binary:Version})
-Conflicts: libboost-filesystem-dev, libboost-filesystem1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-filesystem1.37.0 (= ${binary:Version}), libboost-system1.37-dev (= ${binary:Version})
+Conflicts: libboost-filesystem-dev, libboost-filesystem1.35-dev, libboost-filesystem1.36-dev
 Description: filesystem operations (portable paths, iteration over directories, etc) in C++
  Part of the Boost C++ Libraries collection.
  .
@@ -108,7 +108,45 @@ Description: filesystem operations (portable paths, iteration over directories, 
  manipulate paths, files, and directories.  The goal is to
  facilitate portable script-like operations from within C++ programs.
 
-Package: libboost-graph1.36.0
+Package: libboost-function-types1.37.0
+Homepage: http://boost.org/libs/function-types/
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}
+Description: classify, decompose and synthesize function, function pointer, etc., types in C++
+ Part of the Boost C++ Libraries collection.
+ .
+ Boost.FunctionTypes provides functionality to classify, decompose and
+ synthesize function, function pointer, function reference and pointer
+ to member types.
+ .
+ We collectively refer to these types as callable builtin types.
+ .
+ In particular, the library can be used to:
+  * test whether a type is a specific callable, builtin type, 
+  * extract all component properties from callable, builtin types, and 
+  * create callable, builtin types from specified properties.
+
+Package: libboost-function-types1.37-dev
+Homepage: http://boost.org/libs/function-types/
+Architecture: any
+Section: libdevel
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-function-types1.37.0 (= ${binary:Version}), libboost-system1.37-dev (= ${binary:Version})
+Description: classify, decompose and synthesize function, function pointer, etc., types in C++
+ Part of the Boost C++ Libraries collection.
+ .
+ Boost.FunctionTypes provides functionality to classify, decompose and
+ synthesize function, function pointer, function reference and pointer
+ to member types.
+ .
+ We collectively refer to these types as callable builtin types.
+ .
+ In particular, the library can be used to:
+  * test whether a type is a specific callable, builtin type, 
+  * extract all component properties from callable, builtin types, and 
+  * create callable, builtin types from specified properties.
+
+Package: libboost-graph1.37.0
 Homepage: http://www.boost.org/libs/graph/
 Architecture: any
 Section: libs
@@ -123,13 +161,13 @@ Description: generic graph components and algorithms in C++
  standardized generic interface for traversing graphs is of utmost
  importance to encourage reuse of graph algorithms and data structures.
 
-Package: libboost-graph1.36-dev
+Package: libboost-graph1.37-dev
 Homepage: http://www.boost.org/libs/graph/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-serialization1.36-dev (= ${binary:Version}), libboost-test1.36-dev (= ${binary:Version})
-Recommends: libboost-graph1.36.0 (= ${binary:Version})
-Conflicts: libboost-graph-dev, libboost-graph1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-serialization1.37-dev (= ${binary:Version}), libboost-test1.37-dev (= ${binary:Version})
+Recommends: libboost-graph1.37.0 (= ${binary:Version})
+Conflicts: libboost-graph-dev, libboost-graph1.35-dev, libboost-graph1.36-dev
 Description: generic graph components and algorithms in C++
  Part of the Boost C++ Libraries collection.
  .
@@ -139,7 +177,7 @@ Description: generic graph components and algorithms in C++
  standardized generic interface for traversing graphs is of utmost
  importance to encourage reuse of graph algorithms and data structures.
 
-Package: libboost-iostreams1.36.0
+Package: libboost-iostreams1.37.0
 Homepage: http://www.boost.org/libs/iostreams/
 Architecture: any
 Section: libs
@@ -151,12 +189,12 @@ Description: Boost.Iostreams Library
  which turn models of these concepts into C++ standard library streams
  and stream buffers.
 
-Package: libboost-iostreams1.36-dev
+Package: libboost-iostreams1.37-dev
 Homepage: http://www.boost.org/libs/iostreams/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-regex1.36-dev (= ${binary:Version}), libboost-iostreams1.36.0 (= ${binary:Version})
-Conflicts: libboost-iostreams-dev, libboost-iostreams1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-regex1.37-dev (= ${binary:Version}), libboost-iostreams1.37.0 (= ${binary:Version})
+Conflicts: libboost-iostreams-dev, libboost-iostreams1.35-dev, libboost-iostreams1.36-dev
 Description: Boost.Iostreams Library development files
  Part of the Boost C++ Libraries collection.
  .
@@ -164,7 +202,7 @@ Description: Boost.Iostreams Library development files
  which turn models of these concepts into C++ standard library streams
  and stream buffers.
 
-Package: libboost-math1.36.0
+Package: libboost-math1.37.0
 Homepage: http://www.boost.org/libs/math/
 Architecture: any
 Section: libs
@@ -183,11 +221,11 @@ Description: Boost.Math Library
   * Implementation Toolkit: Provides many of the tools required to implement 
     mathematical special functions.
 
-Package: libboost-math1.36-dev
+Package: libboost-math1.37-dev
 Homepage: http://www.boost.org/libs/math/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-math1.36.0 (= ${binary:Version})
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-math1.37.0 (= ${binary:Version})
 Description: Boost.Math Library development files
  Part of the Boost C++ Libraries collection.
  .
@@ -202,7 +240,7 @@ Description: Boost.Math Library development files
   * Implementation Toolkit: Provides many of the tools required to implement 
     mathematical special functions.
 
-Package: libboost-program-options1.36.0
+Package: libboost-program-options1.37.0
 Homepage: http://www.boost.org/libs/program_options/
 Architecture: any
 Section: libs
@@ -214,12 +252,12 @@ Description: program options library for C++
  (name, value) pairs from the user, via conventional methods such as
  command line and config file.
 
-Package: libboost-program-options1.36-dev
+Package: libboost-program-options1.37-dev
 Homepage: http://www.boost.org/libs/program_options/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-program-options1.36.0 (= ${binary:Version})
-Conflicts: libboost-program-options-dev, libboost-program-options1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-program-options1.37.0 (= ${binary:Version})
+Conflicts: libboost-program-options-dev, libboost-program-options1.35-dev, libboost-program-options1.36-dev
 Description: program options library for C++
  Part of the Boost C++ Libraries collection.
  .
@@ -227,7 +265,7 @@ Description: program options library for C++
  (name, value) pairs from the user, via conventional methods such as
  command line and config file.
 
-Package: libboost-python1.36.0
+Package: libboost-python1.37.0
 Homepage: http://www.boost.org/libs/python/
 Architecture: any
 Section: python
@@ -246,13 +284,13 @@ Description: Boost.Python Library
  in Python, Member function Overloading, Automatic wrapping of
  numeric operators among others.
 
-Package: libboost-python1.36-dev
+Package: libboost-python1.37-dev
 Homepage: http://www.boost.org/libs/python/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-python1.36.0 (= ${binary:Version}), python-dev, ${python:Depends}, python (>= 2.5) | python-celementtree | python-elementtree, gccxml
-Suggests: libboost1.36-doc
-Conflicts: libboost-python-dev, pyste, libboost-python1.36-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-python1.37.0 (= ${binary:Version}), python-dev, ${python:Depends}, python (>= 2.5) | python-celementtree | python-elementtree, gccxml
+Suggests: libboost1.37-doc
+Conflicts: libboost-python-dev, pyste, libboost-python1.35-dev, libboost-python1.36-dev
 Description: Boost.Python Library development files
  Part of the Boost C++ Libraries collection.
  .
@@ -276,7 +314,7 @@ Description: Boost.Python Library development files
  versions of Python in Debian.  Code using this library will need also
  one of the Python development packages.
 
-Package: libboost-regex1.36.0
+Package: libboost-regex1.37.0
 Homepage: http://www.boost.org/libs/regex/
 Architecture: any
 Section: libs
@@ -295,12 +333,12 @@ Description: regular expression library for C++
  manner analogous to either sed or perl), something that traditional C
  libraries can not do.
 
-Package: libboost-regex1.36-dev
+Package: libboost-regex1.37-dev
 Homepage: http://www.boost.org/libs/regex/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-regex1.36.0 (= ${binary:Version}), libicu-dev
-Conflicts: libboost-regex-dev, libboost-regex1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-regex1.37.0 (= ${binary:Version}), libicu-dev
+Conflicts: libboost-regex-dev, libboost-regex1.35-dev, libboost-regex1.36-dev
 Description: regular expression library for C++
  Part of the Boost C++ Libraries collection.
  .
@@ -315,7 +353,7 @@ Description: regular expression library for C++
  manner analogous to either sed or perl), something that traditional C
  libraries can not do.
 
-Package: libboost-serialization1.36.0
+Package: libboost-serialization1.37.0
 Homepage: http://www.boost.org/libs/serialization/
 Architecture: any
 Section: libs
@@ -334,12 +372,12 @@ Description: serialization library for C++
  C++ data structures to a sequence of bytes.
  archive: to refer to a specific rendering of this stream of bytes.
 
-Package: libboost-serialization1.36-dev
+Package: libboost-serialization1.37-dev
 Homepage: http://www.boost.org/libs/serialization/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-serialization1.36.0 (= ${binary:Version})
-Conflicts: libboost-serialization-dev, libboost-serialization1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-serialization1.37.0 (= ${binary:Version})
+Conflicts: libboost-serialization-dev, libboost-serialization1.35-dev, libboost-serialization1.36-dev
 Description: serialization library for C++
  This is a partial list of provided functionalities:
  .
@@ -354,7 +392,7 @@ Description: serialization library for C++
  C++ data structures to a sequence of bytes.
  archive: to refer to a specific rendering of this stream of bytes.
 
-Package: libboost-signals1.36.0
+Package: libboost-signals1.37.0
 Homepage: http://www.boost.org/libs/signals/
 Architecture: any
 Section: libs
@@ -368,12 +406,12 @@ Description: managed signals and slots library for C++
  targets or subscribers), which are called when the signal is
  "emitted."
 
-Package: libboost-signals1.36-dev
+Package: libboost-signals1.37-dev
 Homepage: http://www.boost.org/libs/signals/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-signals1.36.0 (= ${binary:Version})
-Conflicts: libboost-signals-dev, libboost-signals1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-signals1.37.0 (= ${binary:Version})
+Conflicts: libboost-signals-dev, libboost-signals1.35-dev, libboost-signals1.36-dev
 Description: managed signals and slots library for C++
  Part of the Boost C++ Libraries collection.
  .
@@ -383,7 +421,7 @@ Description: managed signals and slots library for C++
  targets or subscribers), which are called when the signal is
  "emitted."
 
-Package: libboost-system1.36.0
+Package: libboost-system1.37.0
 Homepage: http://www.boost.org/libs/system/
 Architecture: any
 Section: libs
@@ -399,11 +437,11 @@ Description: Operating system (e.g. diagnostics support) library
  user-defined sources, each error_code and error_condition has an
  associated error_category.
 
-Package: libboost-system1.36-dev
+Package: libboost-system1.37-dev
 Homepage: http://www.boost.org/libs/system/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-system1.36.0 (= ${binary:Version})
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-system1.37.0 (= ${binary:Version})
 Description: Operating system (e.g. diagnostics support) library
  Part of the Boost C++ Libraries collection.
  .
@@ -415,7 +453,7 @@ Description: Operating system (e.g. diagnostics support) library
  user-defined sources, each error_code and error_condition has an
  associated error_category.
 
-Package: libboost-test1.36.0
+Package: libboost-test1.37.0
 Homepage: http://www.boost.org/libs/test/
 Architecture: any
 Section: libs
@@ -428,12 +466,12 @@ Description: components for writing and executing test suites
   * Facilities to monitor program execution and produce error reports.
   * Unit test framework to simplify writing test cases.
 
-Package: libboost-test1.36-dev
+Package: libboost-test1.37-dev
 Homepage: http://www.boost.org/libs/test/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-test1.36.0 (= ${binary:Version})
-Conflicts: libboost-test-dev, libboost-test1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-test1.37.0 (= ${binary:Version})
+Conflicts: libboost-test-dev, libboost-test1.35-dev, libboost-test1.36-dev
 Description: components for writing and executing test suites
  Part of the Boost C++ Libraries collection.  The library contains
  several components.
@@ -442,7 +480,7 @@ Description: components for writing and executing test suites
   * Facilities to monitor program execution and produce error reports.
   * Unit test framework to simplify writing test cases.
 
-Package: libboost-thread1.36.0
+Package: libboost-thread1.37.0
 Homepage: http://www.boost.org/libs/thread/
 Architecture: any
 Section: libs
@@ -455,12 +493,12 @@ Description: portable C++ multi-threading
  own machine state including program instruction counter and
  registers.
 
-Package: libboost-thread1.36-dev
+Package: libboost-thread1.37-dev
 Homepage: http://www.boost.org/libs/thread/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-date-time1.36-dev (= ${binary:Version}), libboost-thread1.36.0 (= ${binary:Version})
-Conflicts: libboost-thread-dev, libboost-thread1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-date-time1.37-dev (= ${binary:Version}), libboost-thread1.37.0 (= ${binary:Version})
+Conflicts: libboost-thread-dev, libboost-thread1.35-dev, libboost-thread1.36-dev
 Description: portable C++ multi-threading
  Part of the Boost C++ Libraries collection.
  .
@@ -469,7 +507,7 @@ Description: portable C++ multi-threading
  own machine state including program instruction counter and
  registers.
 
-Package: libboost-wave1.36.0
+Package: libboost-wave1.37.0
 Homepage: http://www.boost.org/libs/wave/
 Architecture: any
 Section: libs
@@ -482,12 +520,12 @@ Description: C99/C++ preprocessor library
  packed behind a simple to use interface, which integrates well with
  the well known idioms of the Standard Template Library (STL).
 
-Package: libboost-wave1.36-dev
+Package: libboost-wave1.37-dev
 Homepage: http://www.boost.org/libs/wave/
 Architecture: any
 Section: libdevel
-Depends: libboost1.36-dev (= ${binary:Version}), libboost-serialization1.36-dev (= ${binary:Version}), libboost-wave1.36.0 (= ${binary:Version}), libboost-filesystem1.36-dev (= ${binary:Version})
-Conflicts: libboost-wave-dev, libboost-wave1.35-dev
+Depends: libboost1.37-dev (= ${binary:Version}), libboost-serialization1.37-dev (= ${binary:Version}), libboost-wave1.37.0 (= ${binary:Version}), libboost-filesystem1.37-dev (= ${binary:Version})
+Conflicts: libboost-wave-dev, libboost-wave1.35-dev, libboost-wave1.36-dev
 Description: C99/C++ preprocessor library
  Part of the Boost C++ Libraries collection.
  .
