@@ -1,6 +1,6 @@
 boost1.37 (1.37.0-1) unstable; urgency=low
 
-  * New upstream.
+  * New upstream.  Closes: #504475.
 
   * patches/test-child-exit-t1723.patch:
   * patches/kfreebsd-poll-symbols.patch:
@@ -9,8 +9,10 @@ boost1.37 (1.37.0-1) unstable; urgency=low
   * check-interdep.sh:
   * documention-files:
   * example-files: Update for new version.
+  
+  * control, rules: Minimal updates for 1.37.
 
- -- Steve M. Robbins <smr@debian.org>  Fri, 07 Nov 2008 05:34:48 -0600
+ -- Steve M. Robbins <smr@debian.org>  Sun, 09 Nov 2008 00:36:19 -0600
 
 boost1.36 (1.36.0-2) unstable; urgency=low
 
